--- a/site/src/components/Header.astro
+++ b/site/src/components/Header.astro
@@ -2,11 +2,18 @@
 import DerailedLogo from "./derailed_logo.svg";
 ---
 
-<header class="flex flex-row w-full fixed items-center py-6 justify-evenly top-0 text-white px-14">
-    <DerailedLogo height="34" width="238" />
+<header class="flex flex-row w-full fixed items-center py-6 justify-evenly top-0 text-white px-14 h-20">
+    <a href="/" class="flex flex-col justify-center items-center">
+        <DerailedLogo height="34" width="238" />
+        <h2 class="text-[10px] ml-10">The People's Social Media</h2>
+    </a>
+
     <div class="flex flex-row items-center justify-between">
         <a href="/about" class="p-1 px-4 rounded-4xl hover:bg-sexy-red-black font-semibold">
             About
+        </a>
+        <a href="/features" class="p-1 px-4 rounded-4xl hover:bg-sexy-red-black font-semibold">
+            Features
         </a>
         <a href="/blog" class="p-1 px-4 rounded-4xl hover:bg-sexy-red-black font-semibold">
             Blog
@@ -18,7 +25,7 @@ import DerailedLogo from "./derailed_logo.svg";
             Privacy
         </a>
     </div>
-    <a href="https://app.derailed.top" class="bg-blurple p-1 px-4 rounded-4xl hover:bg-sexy-red-black font-semibold">
+    <a href="https://app.derailed.top" class="bg-blurple p-1 px-4 rounded-4xl hover:bg-sexy-red-black font-semibold transition-all duration-200">
         Open Derailed
     </a>
 </header>
