--- a/site/src/global.css
+++ b/site/src/global.css
@@ -1,91 +1,12 @@
 @import "tailwindcss";
 
 @font-face {
-	font-family: "Nebula Sans";
-	font-style: normal;
-	font-weight: 900;
-	src: url("/NebulaSans/NebulaSans-Black.woff2") format("woff"),;
-}
-
-@font-face {
-	font-family: "Nebula Sans";
-	font-style: normal;
-	font-weight: 800;
-	src: url("/NebulaSans/NebulaSans-Bold.woff2") format("woff"),;
-}
-
-@font-face {
-	font-family: "Nebula Sans";
-	font-style: normal;
-	font-weight: 700;
-	src: url("/NebulaSans/NebulaSans-Semibold.woff2") format("woff"),;
-}
-
-@font-face {
-	font-family: "Nebula Sans";
-	font-style: normal;
-	font-weight: 500;
-	src: url("/NebulaSans/NebulaSans-Medium.woff2") format("woff"),;
-}
-
-@font-face {
-	font-family: "Nebula Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: url("/NebulaSans/NebulaSans-Book.woff2") format("woff"),;
-}
-
-@font-face {
-	font-family: "Nebula Sans";
-	font-style: normal;
-	font-weight: 300;
-	src: url("/NebulaSans/NebulaSans-Light.woff2") format("woff"),;
-}
-
-@font-face {
-	font-family: "Nebula Sans";
-	font-style: italic;
-	font-weight: 900;
-	src: url("/NebulaSans/NebulaSans-BlackItalic.woff2") format("woff"),;
-}
-
-@font-face {
-	font-family: "Nebula Sans";
-	font-style: italic;
-	font-weight: 800;
-	src: url("/NebulaSans/NebulaSans-BoldItalic.woff2") format("woff"),;
-}
-
-@font-face {
-	font-family: "Nebula Sans";
-	font-style: italic;
-	font-weight: 700;
-	src: url("/NebulaSans/NebulaSans-SemiboldItalic.woff2") format("woff"),;
-}
-
-@font-face {
-	font-family: "Nebula Sans";
-	font-style: italic;
-	font-weight: 500;
-	src: url("/NebulaSans/NebulaSans-MediumItalic.woff2") format("woff"),;
-}
-
-@font-face {
-	font-family: "Nebula Sans";
-	font-style: italic;
-	font-weight: 400;
-	src: url("/NebulaSans/NebulaSans-BookItalic.woff2") format("woff"),;
-}
-
-@font-face {
-	font-family: "Nebula Sans";
-	font-style: italic;
-	font-weight: 300;
-	src: url("/NebulaSans/NebulaSans-LightItalic.woff2") format("woff"),;
+	font-family: "Figtree";
+	src: url("/Figtree/Figtree-VariableFont_wght.ttf");
 }
 
 body {
-	font-family: "Nebula Sans";
+	font-family: "Figtree";
 	@apply text-white;
 }
 
