--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -11,10 +11,28 @@ import Header from "../components/Header.astro"
 		<meta name="generator" content={Astro.generator} />
 		<title>Derailed | The People's Social Media</title>
 	</head>
-	<body>
+	<body class="bg-[url('/saturn.webp')] bg-center bg-cover bg-no-repeat h-screen backdrop-blur-[45px] overflow-hidden">
 		<Header />
-		<div class="bg-[url('/saturn.webp')] bg-center bg-cover bg-no-repeat h-screen">
-			<h1 class="pt-32">Astro</h1>
+
+		<main class="flex flex-col w-screen h-full items-center justify-center">
+			<div class="flex flex-col justify-center items-center gap-4">
+				<h1 class="font-bold text-4xl">It's time to ditch <b>Discord</b>.</h1>
+
+				<p class="font-normal text-center max-w-xl">
+					Create your <b>own</b> guilds, communities, and friend groups in the comfort of a <b>safe</b>, <b>secure</b>, and <b>intuitive interface</b>.
+				</p>
+
+				<div class="flex flex-row gap-5">	
+					<a href="https://app.derailed.top" class="bg-blurple/80 hover:bg-blurple hover:scale-105 transition-all duration-500 p-4 rounded-lg font-bold">Try Derailed, It's free.</a>
+				</div>
+			</div>
+		</main>
+
+		<div class="flex justify-center items-center bottom-0 fixed w-full">
+			<a href="/features" class="group inline-flex items-center justify-center p-4 font-bold">
+				<p>Okay, I'm interested. Tell me more</p>
+				<span class="ml-2 group-hover:translate-x-1 transition-transform duration-200">→</div>
+			</a>
 		</div>
 	</body>
 </html>
