--- a/site/src/global.css
+++ b/site/src/global.css
@@ -11,8 +11,8 @@ body {
 }
 
 @theme {
-	--color-blurple: #7067cf;
-	--color-sexy-lighter-black: #272727;
-	--color-sexy-red-black: #1b1b1e;
-	--color-sexy-gray: #758173;
+	--color-blurple: #8aa3ff;
+	--color-sexy-lighter-black: #2a2a2e;
+	--color-sexy-red-black: #141417;
+	--color-sexy-gray: #a0a0a5;
 }
