--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -16,10 +16,10 @@ import Header from "../components/Header.astro"
 
 		<main class="flex flex-col w-screen h-full items-center justify-center">
 			<div class="flex flex-col justify-center items-center gap-4">
-				<h1 class="font-bold text-4xl">It's time to ditch <b>Discord</b>.</h1>
+				<h1 class="font-semibold text-4xl">It's time to ditch <b class="font-bold">Discord</b>.</h1>
 
 				<p class="font-normal text-center max-w-xl">
-					Create your <b>own</b> guilds, communities, and friend groups in the comfort of a <b>safe</b>, <b>secure</b>, and <b>intuitive interface</b>.
+					Create your <b class="font-bold">own</b> guilds, communities, and friend groups in the comfort of a <b class="font-bold">safe</b>, <b class="font-bold">secure</b>, and <b class="font-bold">intuitive interface</b>.
 				</p>
 
 				<div class="flex flex-row gap-5">	
