--- a/app/src/app.css
+++ b/app/src/app.css
@@ -8,6 +8,10 @@ body {
 	@apply text-white;
 }
 
+.py-half-one {
+	@apply py-0.5;
+}
+
 .tiptap p.is-editor-empty:first-child::before {
 	@apply text-sexy-gray/50;
 	content: attr(data-placeholder);
