refactor: redesign to more nostalgic design

--- a/site/src/global.css
+++ b/site/src/global.css
@@ -11,7 +11,7 @@ body {
 }
 
 @theme {
-	--color-blurple: #8aa3ff;
+	--color-blurple: #7a83ff;
 	--color-sexy-lighter-black: #2a2a2e;
 	--color-sexy-red-black: #141417;
 	--color-sexy-gray: #a0a0a5;
