--- a/app/src/app.css
+++ b/app/src/app.css
@@ -2,18 +2,98 @@
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
 
+@font-face {
+	font-family: "Nebula Sans";
+	font-style: normal;
+	font-weight: 900;
+	src: url("/NebulaSans/NebulaSans-Black.woff2") format("woff"),;
+}
+
+@font-face {
+	font-family: "Nebula Sans";
+	font-style: normal;
+	font-weight: 800;
+	src: url("/NebulaSans/NebulaSans-Bold.woff2") format("woff"),;
+}
+
+@font-face {
+	font-family: "Nebula Sans";
+	font-style: normal;
+	font-weight: 700;
+	src: url("/NebulaSans/NebulaSans-Semibold.woff2") format("woff"),;
+}
+
+@font-face {
+	font-family: "Nebula Sans";
+	font-style: normal;
+	font-weight: 400;
+	src: url("/NebulaSans/NebulaSans-Medium.woff2") format("woff"),;
+}
+
+@font-face {
+	font-family: "Nebula Sans";
+	font-style: normal;
+	font-weight: 300;
+	src: url("/NebulaSans/NebulaSans-Book.woff2") format("woff"),;
+}
+
+@font-face {
+	font-family: "Nebula Sans";
+	font-style: normal;
+	font-weight: 200;
+	src: url("/NebulaSans/NebulaSans-Light.woff2") format("woff"),;
+}
+
+@font-face {
+	font-family: "Nebula Sans";
+	font-style: italic;
+	font-weight: 900;
+	src: url("/NebulaSans/NebulaSans-BlackItalic.woff2") format("woff"),;
+}
+
+@font-face {
+	font-family: "Nebula Sans";
+	font-style: italic;
+	font-weight: 800;
+	src: url("/NebulaSans/NebulaSans-BoldItalic.woff2") format("woff"),;
+}
+
+@font-face {
+	font-family: "Nebula Sans";
+	font-style: italic;
+	font-weight: 700;
+	src: url("/NebulaSans/NebulaSans-SemiboldItalic.woff2") format("woff"),;
+}
+
+@font-face {
+	font-family: "Nebula Sans";
+	font-style: italic;
+	font-weight: 400;
+	src: url("/NebulaSans/NebulaSans-MediumItalic.woff2") format("woff"),;
+}
+
+@font-face {
+	font-family: "Nebula Sans";
+	font-style: italic;
+	font-weight: 300;
+	src: url("/NebulaSans/NebulaSans-BookItalic.woff2") format("woff"),;
+}
+
+@font-face {
+	font-family: "Nebula Sans";
+	font-style: italic;
+	font-weight: 200;
+	src: url("/NebulaSans/NebulaSans-LightItalic.woff2") format("woff"),;
+}
+
 body {
 	background-color: #1b1b1e;
-	font-family: "Figtree";
+	font-family: "Nebula Sans";
 	@apply text-white;
 }
 
-.text-whitekinda {
-	@apply text-white/85;
-}
-
 .tiptap p.is-editor-empty:first-child::before {
-	@apply text-sexy-gray/50;
+	@apply text-weep-gray/50;
 	content: attr(data-placeholder);
 	float: left;
 	height: 0;
@@ -28,10 +108,21 @@ body {
 }
 
 @theme {
-	--color-blurple: #8aa3ff;
+	--color-blurple: #7a83ff;
 	--color-sexy-lighter-black: #2a2a2e;
 	--color-sexy-red-black: #141417;
 	--color-sexy-gray: #a0a0a5;
+
+	--color-primary: #36393e;
+	--color-me: #282b30;
+	--color-aside: #2e3136;
+	--color-guild-aside: #1e2124;
+	--color-inps: #424549;
+	--color-mem-aside: #2e3136;
+	--color-weep-gray: hsl(215, 10%, 65.3%);
+
+	--color-foots: #292B2F;
+	--color-pops: #36393F;
 }
 
 @layer utilities {
