--- a/site/src/pages/features.astro
+++ b/site/src/pages/features.astro
@@ -1,6 +1,6 @@
 ---
-import '../global.css';
-import Header from "../components/Header.astro"
+import "../global.css";
+import Header from "../components/Header.astro";
 ---
 
 <html lang="en">
@@ -19,28 +19,28 @@ import Header from "../components/Header.astro"
                 <div class="flex flex-col justify-center items-center gap-6 bg-sexy-lighter-black/60 rounded-xl p-8 w-[400px] h-[232px] text-center">
                     <h1 class="font-bold text-4xl bg-gradient-to-r from-blurple to-blurple/60 bg-clip-text text-transparent">Comfort</h1>
                     <p class="font-medium text-gray-300 leading-relaxed">
-                        We have a sleek, modern, more intuitively designed UI made specifically to get you chatting as much as you'd like.
+                        We have a sleek, modern, more intuitively designed UI made specifically to get you chatting as much as you'd like
                     </p>
                 </div>
 
                 <div class="flex flex-col justify-center items-center gap-6 bg-sexy-lighter-black/60 rounded-xl p-8 w-[400px] h-[232px] text-center">
                     <h1 class="font-bold text-4xl bg-gradient-to-r from-blurple to-blurple/60 bg-clip-text text-transparent">Stupid Fast</h1>
                     <p class="font-medium text-gray-300 leading-relaxed">
-                        Derailed is created with tools that are fast and efficient, never leaving you waiting on spinners.
+                        Derailed is created with tools that are fast and efficient, never leaving you waiting on spinners
                     </p>
                 </div>
 
                 <div class="flex flex-col justify-center items-center gap-6 bg-sexy-lighter-black/60 rounded-xl p-8 w-[400px] h-[232px] text-center">
-                    <h1 class="font-bold text-4xl bg-gradient-to-r from-blurple to-blurple/60 bg-clip-text text-transparent">Privacy</h1>
+                    <h1 class="font-bold text-4xl bg-gradient-to-r from-blurple to-blurple/60 bg-clip-text text-transparent">Secure</h1>
                     <p class="font-medium text-gray-300 leading-relaxed">
-                        Chats are securely encrypted so even your super-secret group chats can never be known to us.
+                        Our open nature allows security folks to detect vulnerabilities before they even get to you
                     </p>
                 </div>
 
                 <div class="flex flex-col justify-center items-center gap-6 bg-sexy-lighter-black/60 rounded-xl p-8 w-[400px] h-[232px] text-center">
                     <h1 class="font-bold text-4xl bg-gradient-to-r from-blurple to-blurple/60 bg-clip-text text-transparent">Open and Free</h1>
                     <p class="font-medium text-gray-300 leading-relaxed">
-                        We are an open platform. You can check Derailed from top to bottom and assure yourself that we don’t steal or use your data maliciously.
+                        We are an open platform. You can check Derailed from top to bottom and assure yourself that we don’t steal or use your data maliciously
                     </p>
                 </div>
             </div>
