--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import '../global.css';
-import Header from "../components/Header.astro"
+import "../global.css";
+import Header from "../components/Header.astro";
 ---
 
 <html lang="en">
@@ -23,7 +23,7 @@ import Header from "../components/Header.astro"
 				</p>
 
 				<div class="flex flex-row gap-5">	
-					<a href="https://app.derailed.top" class="bg-blurple/80 hover:bg-blurple hover:scale-105 transition-all duration-500 p-4 rounded-lg font-bold">Try Derailed, It's free.</a>
+					<a class="bg-blurple/80 hover:bg-blurple hover:scale-105 transition-all duration-500 p-4 rounded-lg font-bold">Try Derailed, It's free.</a>
 				</div>
 			</div>
 		</main>
