--- a/app/src/app.css
+++ b/app/src/app.css
@@ -121,8 +121,8 @@ body {
 	--color-mem-aside: #2e3136;
 	--color-weep-gray: hsl(215, 10%, 65.3%);
 
-	--color-foots: #292B2F;
-	--color-pops: #36393F;
+	--color-foots: #292b2f;
+	--color-pops: #36393f;
 }
 
 @layer utilities {
