--- a/site/src/layouts/BlogPost.astro
+++ b/site/src/layouts/BlogPost.astro
@@ -1,8 +1,8 @@
 ---
-import '../global.css';
+import "../global.css";
 import moment from "moment-timezone";
 import Header from "../components/Header.astro";
-const {frontmatter} = Astro.props;
+const { frontmatter } = Astro.props;
 ---
 <html>
 	<head>
@@ -10,12 +10,17 @@ const {frontmatter} = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+        <meta property="og:title" content={`${frontmatter.title} | Derailed Blog`}>
+        <meta property="og:description" content={frontmatter.description}>
+        <meta property="og:image" content={`https://derailed.top${frontmatter.image}`}>
+        <meta property="og:url" content={`https://derailed.top/news/${frontmatter.slug}`}>
+        <meta property="og:type" content="website">
 		<title>{frontmatter.title} | Derailed Blog</title>
 	</head>
     <body class="flex h-screen w-full bg-black">
         <Header />
 
-        <div class="flex flex-col mt-44 items-center w-full">
+        <div class="flex flex-col mt-44 items-center max-md:mx-4 w-full">
             <div class="max-w-3xl mb-10 space-y-5">
                 <div class="text-sexy-gray">
                     <div>
@@ -38,7 +43,7 @@ const {frontmatter} = Astro.props;
                 </div>
             </div>
             <img class="rounded-2xl" src={frontmatter.image} height="400px" width="1000px" style="object-fit:contain;" />
-            <div class="mt-10 flex flex-col max-w-2xl text-pretty justify-center">
+            <div class="mt-10 flex flex-col max-w-2xl text-pretty justify-center pb-5">
                 <slot />
             </div>
         </div>
