chore: fix width

--- a/site/src/pages/news/index.astro
+++ b/site/src/pages/news/index.astro
@@ -38,7 +38,7 @@ function getDate(ts: number): string {
             <div class="mb-14 text-4xl font-bold">
                 Latest News
             </div>
-            <a href={`/news/${newestPostId}`} class="flex flex-row w-[52rem]- items-center bg-sexy-red-black/65 rounded-4xl">
+            <a href={`/news/${newestPostId}`} class="flex flex-row w-[52rem] items-center bg-sexy-red-black/65 rounded-4xl">
                 <img class="rounded-l-4xl" src={newestPost.image} height="250px" width="500px" style="object-fit:contain;" />
                 <div class="pl-5 w-full flex flex-col justify-between py-7 h-full">
                     <div class="space-y-3">
