refactor, feat: banner sizes, logout button works now

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -108,6 +108,10 @@ body {
 	@apply outline-0;
 }
 
+button {
+	@apply cursor-pointer;
+}
+
 @theme {
 	--color-blurple: #7a83ff;
 	--color-sexy-lighter-black: #2a2a2e;
