--- a/site/src/layouts/BlogPost.astro
+++ b/site/src/layouts/BlogPost.astro
@@ -43,7 +43,7 @@ const { frontmatter } = Astro.props;
                 </div>
             </div>
             <img class="rounded-2xl" src={frontmatter.image} height="400px" width="1000px" style="object-fit:contain;" />
-            <div class="mt-10 flex flex-col max-w-2xl text-pretty justify-center pb-5">
+            <div class="mt-10 flex flex-col max-w-2xl text-pretty justify-center pb-5 Markdown">
                 <slot />
             </div>
         </div>
