chore: finalize main color

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -125,7 +125,7 @@ button {
 }
 
 @theme {
-	--color-blurple: #7a83ff;
+	--color-blurple: #5B77DC;
 	--color-sexy-lighter-black: #2a2a2e;
 	--color-sexy-red-black: #141417;
 	--color-sexy-gray: #a0a0a5;
