--- a/site/src/global.css
+++ b/site/src/global.css
@@ -90,7 +90,7 @@ body {
 }
 
 @theme {
-	--color-blurple: #7a83ff;
+	--color-blurple: #5B77DC;
 	--color-sexy-lighter-black: #2a2a2e;
 	--color-sexy-red-black: #141417;
 	--color-sexy-gray: #a0a0a5;
