--- a/app/src/app.css
+++ b/app/src/app.css
@@ -123,7 +123,80 @@ button {
 	}
 }
 
+.pop-in-trans {
+	transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
+}
+
+.glass-wrapper {
+  position: relative;
+  display: flex;
+  font-weight: 600;
+  overflow: hidden;
+
+  color: black;
+
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
+
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
+}
+
+.glass-effect {
+  position: absolute;
+  z-index: 0;
+  inset: 0;
+
+  backdrop-filter: blur(3px);
+  filter: url(#glass-distortion);
+  overflow: hidden;
+  isolation: isolate;
+}
+
+.glass-tint {
+  z-index: 1;
+  position: absolute;
+  inset: 0;
+  background: rgba(255, 255, 255, 0.25);
+}
+
+.glass-shine {
+  position: absolute;
+  inset: 0;
+  z-index: 2;
+
+  overflow: hidden;
+
+  box-shadow: inset 2px 2px 1px 0 rgba(255, 255, 255, 0.5),
+    inset -1px -1px 1px 1px rgba(255, 255, 255, 0.5);
+}
+
+.round-corners {
+	border-radius: 2rem;
+}
+
+.round-corners,
+.round-corners > div {
+	border-radius: 2rem;
+}
+
+.round-button {
+	border-radius: 2rem;
+}
+
+.round-button,
+.round-button:hover {
+	border-radius: 3rem;
+}
+
+.round-button > div {
+	border-radius: 2rem;
+}
+
+.round-button:hover > div {
+	border-radius: 3rem;
+}
+
 @theme {
+	--color-thingy: rgba(255, 255, 255, 0.5);
 	--color-blurple: #5B77DC;
 	--color-sexy-lighter-black: #2a2a2e;
 	--color-sexy-red-black: #141417;
