--- a/app/src/app.css
+++ b/app/src/app.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
-@plugin '@tailwindcss/forms';
-@plugin 'tailwindcss-animate';
+@plugin "@tailwindcss/forms";
+@plugin "tailwindcss-animate";
+@plugin "tailwindcss-neumorphism-ui";
 
 body {
 	background-color: #36393e;
