--- a/app/src/app.css
+++ b/app/src/app.css
@@ -4,7 +4,7 @@
 @plugin "tailwindcss-neumorphism-ui";
 
 body {
-	background-color: #36393e;
+	background-color: hsl(210, 3%, 13%);
 	font-family: "Inter";
 	@apply text-white;
 }
@@ -40,81 +40,9 @@ button {
 	}
 }
 
-.pop-in-trans {
-	transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
-}
-
-.glass-wrapper {
-	position: relative;
-	display: flex;
-	font-weight: 600;
-	overflow: hidden;
-
-	color: black;
-
-	box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
-
-	transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
-}
-
-.glass-effect {
-	position: absolute;
-	z-index: 0;
-	inset: 0;
-
-	backdrop-filter: blur(3px);
-	filter: url(#glass-distortion);
-	overflow: hidden;
-	isolation: isolate;
-}
-
-.glass-tint {
-	z-index: 1;
-	position: absolute;
-	inset: 0;
-	background: rgba(255, 255, 255, 0.25);
-}
-
-.glass-shine {
-	position: absolute;
-	inset: 0;
-	z-index: 2;
-
-	overflow: hidden;
-
-	box-shadow: inset 2px 2px 1px 0 rgba(255, 255, 255, 0.5), inset -1px -1px 1px
-		1px rgba(255, 255, 255, 0.5);
-}
-
-.round-corners {
-	border-radius: 2rem;
-}
-
-.round-corners,
-.round-corners > div {
-	border-radius: 2rem;
-}
-
-.round-button {
-	border-radius: 2rem;
-}
-
-.round-button,
-.round-button:hover {
-	border-radius: 3rem;
-}
-
-.round-button > div {
-	border-radius: 2rem;
-}
-
-.round-button:hover > div {
-	border-radius: 3rem;
-}
-
 @theme {
 	--color-thingy: rgba(255, 255, 255, 0.5);
-	--color-blurple: #5b77dc;
+	--color-blurple: #3e6bff;
 	--color-sexy-lighter-black: #2a2a2e;
 	--color-sexy-red-black: #141417;
 	--color-sexy-gray: #a0a0a5;
@@ -129,6 +57,14 @@ button {
 
 	--color-foots: #292b2f;
 	--color-pops: #36393f;
+
+	--color-lighter-bg: hsl(210, 3%, 13%);
+	--color-light-bg: hsl(210, 3%, 11%);
+	--color-dark-bg: hsl(210, 3%, 8%);
+	--color-secondary-bg: hsl(210, 3%, 9%);
+	--color-tertiary-bg: hsl(210, 3%, 20%);
+	--color-fourth-bg: hsl(210, 3%, 25%);
+	--color-fifth-bg: hsl(210, 3%, 35%);
 }
 
 @layer utilities {
