--- a/app/src/app.css
+++ b/app/src/app.css
@@ -42,7 +42,7 @@ button {
 
 .markdown-branding {
 	h1 {
-		@apply text-3xl font-bold;
+		@apply text-3xl font-bold mb-4;
 	}
 	h2 {
 		@apply text-2xl font-bold;
