--- a/app/src/app.css
+++ b/app/src/app.css
@@ -45,19 +45,19 @@ button {
 		@apply text-3xl font-bold mb-4;
 	}
 	h2 {
-		@apply text-2xl font-bold;
+		@apply text-2xl font-bold py-1;
 	}
 	h3 {
-		@apply text-xl font-bold;
+		@apply text-xl font-bold py-1;
 	}
 	h4 {
-		@apply font-bold;
+		@apply font-bold py-1;
 	}
 	h5 {
-		@apply text-base font-bold;
+		@apply text-base font-bold py-1;
 	}
 	h6 {
-		@apply text-sm font-semibold;
+		@apply text-sm font-semibold py-1;
 	}
 	b {
 		@apply font-bold;
